fix: news list pill alignment
(do not limit alignment to title)

--- a/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-core-styles/components/c-news--list.css
+++ b/apps/tup-cms/src/taccsite_custom/tup_cms/static/tup_cms/css/for-core-styles/components/c-news--list.css
@@ -143,7 +143,7 @@
 }
 
 /* To style "Update" pill in title */
-.c-news__title .c-pill {
+.c-news .c-pill {
   vertical-align: middle;
   transform: translateY(-0.125em);
 }
